# ml4ms

./: .coveragerc  .flake8  .gitattributes  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: testing.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
ml4ms/: _version.py  chained_db.py  core.py  database.py  exemplars.json  fsclient.py  io.py  main.py  ml4msrc.json  runcontrol.py  schemas.json  schemas.py  tools.py
ml4ms/db/: test_coll.yml
ml4ms/tests/: conftest.py  test_core.py  test_fsclient.py  test_io.py  test_validate.py
