[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4ms"
version = "0.1.0"
authors = [
  { name="Tanaporn Na Narong", email="" },
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
]
maintainers = [
  { name="Tanaporn Na Narong", email="" },
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
]
description = "Python package for facilitating machine learning tasks on collections of materials data, especially including measured spectra."
keywords = ["materials science", "machine learning", "powder diffraction", "atomic pair distribution function", "XANES"]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering :: Physics',
]

[project.urls]
Homepage = "https://github.com/billingegroup/ml4ms/"
Issues = "https://github.com/billingegroup/ml4ms/issues"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
ml4ms = "ml4ms.main:main"

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
